<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/toppings"
            android:textSize="16dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkbox_cream_choice_Whipped_Cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:paddingLeft="34dp"
            android:text="@string/whipped_cream"
            android:textSize="16dp" />
        <CheckBox
            android:id="@+id/checkbox_cream_choice_Chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:paddingLeft="34dp"
            android:text="@string/chocolate"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"

            android:text="@string/chocolate"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/incremnt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:onClick="incrementOrder"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="+"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="1"
                android:textColor="#000000"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decremnt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:onClick="decrementOrder"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="-"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/order_summary"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:paddingLeft="16dp"
            android:text="5"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:onClick="submitOrder"
            android:paddingStart="16dp"
            android:text="@string/order" />


    </LinearLayout>

</ScrollView>